# mysql-es

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
db/: init.sql
src/: cqrs.rs  error.rs  event_repository.rs  lib.rs  query_repository.rs  testing.rs  types.rs  view_repository.rs
tests/: lib.rs
