[package]
name = "mysql-es"
version = "0.4.10"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A MySql implementation of an event repository for cqrs-es."
repository = "https://github.com/serverlesstechnology/mysql-es"
documentation = "https://docs.rs/mysql-es"
readme = "README.md"

[dependencies]
cqrs-es = "0.4.10"

async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "mysql", "json"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
uuid = { version = "1.4", features = ["v4"]}

[features]
default = ["runtime-tokio-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
